Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/NonStaticFieldExpr2.out
NonStaticFieldExpr2.java:14:33: compiler.err.non-static.cant.be.ref: kindname.variable, x
1 error
